ConcatenatedSequence now also implements TemplateCollectionModelEx, and thus has an isEmpty() that's more efficient than size() == 0. Also extende the Unit test to check with more kind sequence implementations, and with sequences containing null items.